apps/umami/umami-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-db
  namespace: umami
spec:
  selector:
    matchLabels:
      app: umami-db
  template:
    metadata:
      labels:
        app: umami-db
    spec:
      containers:
        - name: umami-db
          image: postgres
          volumeMounts:
            - name: umami-db-mount
              mountPath: /var/lib/postgresql/data
            - name: initdb-scripts
              mountPath: /docker-entrypoint-initdb.d/
          ports:
            - containerPort: 5432
      volumes:
        - name: umami-db-mount
          persistentVolumeClaim:
            claimName: umami-pvc
        - name: initdb-scripts
          configMap:
            name: initdb-scripts
            items:
              - key: "schema.postgresql.sql"
                path: "schema.postgresql.sql"
---
apiVersion: v1
kind: Service
metadata:
  name: umami-db
  namespace: umami
spec:
  selector:
    app: umami-db
  ports:
    - protocol: TCP
      port: 5432
